# visual-engine-mcp

./: README.md  com.visual-engine.mcp.plist  install.sh  pyproject.toml
visual_engine/: auth.py  oauth_provider.py  server.py  vision.py
